--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body{
     background-color: rgb(17, 17, 17);
     margin: 0;
-    padding: 0;
+    padding: 50%;
+    overflow: hidden;
 }
 
 #canvas{
@@ -9,7 +10,7 @@ body{
    /* background-color: aliceblue;*/
     border: 2px solid white;
     width: 800px;
-    height: 700px;
+    height: 80%;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
